# queries-rj-iplanrio

./: .coderabbit.yaml  .dbt-checkpoint.yaml  .dbtignore  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pre-commit-config_dbt.yaml  README.md  cli.py  dbt-requirements.txt  dbt_project.yml  dbt_project.ymlZone.Identifier  package-lock.yml  package-lock.ymlZone.Identifier  packages.yml  packages.ymlZone.Identifier  profiles.yml  pyproject.toml  remove_nonstring_quotes_all.py
.claude/: settings.local.json
.cursor/rules/: dbt-best-practices.mdc  dbt-column-naming.mdc  dbt-folder-structure.mdc  dbt-models-explanation.mdc  dbt-naming-convetions.mdc  dbt-sql-standards.mdc  dbt-struct-patterns.mdc  dbt-test-standards.mdc  dbt-yaml-standards.mdc  iplan-column-naming.mdc
.github/: CODEOWNERS
.github/workflows/: dbt-cd.yml  dbt-ci.yml  dbt-drop-dev-schemas.yml  pr.yml  sqlfmt.yml
macros/: clean_and_cast.sql  debug_var.sql  incremental_filter.sql  padronize_telefone_rmi.sql  save_query_results.sql
macros/dbt_internal/: drop_pr_staging_schemas.sql  generate_database_name.sql  generate_schema_name.sql  get_custom_alias.sql
macros/materializations/: udf.sql
macros/string/: padronize_id.sql
macros/telefone/: classify_confianca_propriedade.sql  classify_estrategia_envio.sql  classify_phone_type.sql  extract_ddd.sql  extract_ddi.sql  extract_numero.sql  generate_hash.sql  (+5 more)
scripts/: QUICKSTART.md  README.md  README_clean_and_cast.md  main.py  replace_with_clean_and_cast_macro.py
snapshots/: int_telefones_snapshot.sql
tools/: check_resources.py  recce.md
(+1998 files in other folders)
