[project]
name = "queries-rj-iplanrio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery==1.11.0b1",
    "dbt-core==1.10.9",
    "pyyaml>=6.0.2",
    "shandy-sqlfmt[jinjafmt]>=0.26.0",
]

[tool.setuptools]
py-modules = []
